[project]
name = "strava-fun"
version = "0.1.0"
description = ""
authors = [
    {name = "Michael Patterson",email = "mjpatter88@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "requests (>=2.33.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-watcher (>=0.6.3,<0.7.0)"
]
[tool.poetry]
package-mode = false